EA: fixed filter background | tip alignment

--- a/src/components/app/list/list.css
+++ b/src/components/app/list/list.css
@@ -56,7 +56,7 @@
 }
 
 .saved-filters__wrap {
-    padding: 6px 14px;
+    padding: 6px 20px;
     display: flex;
     flex-wrap: wrap;
     background-color: var(--white);
@@ -68,7 +68,7 @@
     align-items: center;
     border-radius: 4px;
     border: solid 1px var(--N200);
-    background-color: var(--window-bg);
+    background-color: #f7fafc;
     text-transform: lowercase;
     font-size: 12px;
     font-weight: normal;
@@ -81,18 +81,23 @@
     padding-left: 6px;
     padding-right: 6px;
     user-select: none;
-    margin: 0 6px 0 0;
+    margin: 0 12px 0 0;
     min-height: 24px;
+}
+
+.saved-filter__close-btn {
+    font-size: 14px;
+    line-height: 1;
+    margin-left: 10px;
+    color: #72767a;
+    border: none;
+    padding: 1px;
+    background-color: #f7fafc;
 }
 
 .saved-filters__clear-btn{
    margin: 0;
    padding: 0;
-}
-
-.saved-filter__clear-btn{
-    padding: 0 0 0 6px;
-    background-color: var(--window-bg);
 }
 
 .app-list__header {
